# enigma

./: .gitignore  README.md  exercise_dependencies.txt  pyproject.toml
exercise01/: README.md  index.html  main.py  template.py  test_prepare.py
exercise02/: README.md  index.html  main.py  template.py  test_substitution_cipher99.py
exercise03/: README.md  index.html  main.py  template.py  test_inverted.py
exercise04/: README.md  index.html  main.py  template.py  test_process_message.py
exercise05/: README.md  index.html  main.py  template.py  test_quintet.py
exercise06/: README.md  index.html  main.py  template.py  test_rotate99.py
exercise07/: README.md  index.html  main.py  template.py  test_rotating_cipher.py
exercise08/: README.md  index.html  main.py  template.py  test_rotor.py
exercise09/: README.md  index.html  main.py  template.py  test_entry_rotor.py
exercise10/: README.md  index.html  main.py  template.py  test_reflector.py
exercise11/: README.md  index.html  main.py  template.py  test_factory99.py
exercise12/: README.md  index.html  main.py  template.py  test_m3.py
exercise13/: README.md  index.html
intro/: README.md  index.html
src/: README.md  enigma.py
